--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-map-gl": "^7.1.7",
     "react-photo-album": "^3.0.2",
     "recharts": "^2.13.3",
+    "sharp": "^0.32.6",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
