--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
     "query-string": "^9.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-grid-gallery": "^1.0.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-map-gl": "^7.1.7",
     "react-photo-album": "^3.0.2",
+    "react-responsive": "^10.0.0",
     "recharts": "^2.13.3",
     "sharp": "^0.32.6",
     "sonner": "^1.7.0",
