--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-grid-gallery": "^1.0.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-map-gl": "^7.1.7",
     "react-photo-album": "^3.0.2",
     "react-responsive": "^10.0.0",
