--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "postcss": "^8",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
+    "react-feather": "^2.0.10",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
