--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "recharts": "^2.13.3",
     "sharp": "^0.32.6",
     "sonner": "^1.7.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "ts-exif-parser": "^0.2.2",
