--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@uploadthing/react": "^7.0.3",
     "@vercel/postgres": "^0.10.0",
     "bcryptjs": "^2.4.3",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
